# xrtailor

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/: CONTRIBUTING.md
docs/: reference.md
docs/en/: requirements.txt
docs/en/source/: conf.py  index.rst
docs/en/source/cloth_mechanics/: basic_xpbd.md  fem.md
docs/en/source/getting_started/: build_from_source.md  engine_config_example.md  overview.md  quick_start.md  simulation_config_example.md  technical_brief.md
docs/en/source/quality_mode/: impact_zone_optimization.md
docs/licenses/: CUDA_ClothDynamics_PBD_GraphColoring.txt  ClothSimulator.txt  alembic.txt  eigen.txt  peridyno.txt
examples/: engine_conf.json
examples/gltf/: simulation_conf_gltf.json
examples/smpl/: simulation_conf_smpl.json
examples/universal/: simulation_conf_universal.json
scripts/: build_dependencies.bat  build_dependencies.sh  run_clang_format.sh
tools/: pack_dependency.py
xrtailor/include/xrtailor/config/: Base.hpp  ClothConfigParser.hpp  EngineConfigParser.hpp  SimulationConfigParser.hpp  UniversalActorConfig.hpp
xrtailor/include/xrtailor/core/: Common.cuh  Common.hpp  DeviceHelper.cuh  ErrorDefs.hpp  Global.hpp  Precompiled.h  Scalar.cuh  Scalar.hpp  Version.hpp  Version.hpp.in
xrtailor/include/xrtailor/math/: BasicPrimitiveTests.cuh  MathFunctions.cuh  Quaternion.cuh  Transform3x3.cuh
xrtailor/include/xrtailor/memory/: Edge.cuh  Face.cuh  MemoryPool.cuh  Node.cuh  Pair.cuh  RenderableVertex.cuh
xrtailor/include/xrtailor/physics/: ClothSolverHelper.cuh  ClothSolverHelper.hpp  DebugDrawingHelper.hpp  PhysicsMesh.cuh  PhysicsMeshHelper.cuh
xrtailor/include/xrtailor/physics/broad_phase/: Bounds.cuh  Primitive.cuh
xrtailor/include/xrtailor/physics/dynamics/: BasicConstraint.cuh  BasicSolver.cuh  BasicSolverHelper.cuh  BindingConstraint.cuh  FEMConstraint.cuh  FEMHelper.cuh  FEMSolver.cuh  LongRangeAttachments.cuh
xrtailor/include/xrtailor/physics/graph_coloring/: Base.cuh  Defs.cuh  GraphColoringHelper.cuh
xrtailor/include/xrtailor/physics/icm/: GlobalIntersectionAnalysis.cuh  GlobalIntersectionAnalysisHelper.cuh  IntersectionContourMinimization.cuh  IntersectionContourMinimizationHelper.cuh
xrtailor/include/xrtailor/physics/impact_zone/: Defs.hpp  Entry.cuh  Impact.cuh  ImpactHelper.cuh  ImpactZone.cuh  ImpactZoneHelper.cuh  ImpactZoneOptimizer.cuh  Optimizer.cuh  ParallelImpactZoneOptimizer.cuh  ParallelOptimizer.cuh
xrtailor/include/xrtailor/physics/pbd_collision/: Constraint.cuh  Contact.cuh
xrtailor/include/xrtailor/physics/predictive_contact/: Constraint.cuh  Solver.cuh
xrtailor/include/xrtailor/physics/representative_triangle/: RTriangle.cuh
xrtailor/include/xrtailor/physics/repulsion/: ImminentRepulsion.cuh  ImminentRepulsionHelper.cuh  Impulse.cuh  PBDRepulsion.cuh  Proximity.cuh  RepulsionSolver.cuh
xrtailor/include/xrtailor/physics/sdf/: Collider.hpp  SDFCollider.cuh
xrtailor/include/xrtailor/pipeline/base/: ClothObjectBase.hpp  ClothSolverBase.hpp  ObstacleObjectBase.hpp
xrtailor/include/xrtailor/runtime/engine/: Engine.hpp  GameInstance.hpp
xrtailor/include/xrtailor/runtime/export/: AlembicExporter.hpp  ObjSequenceExporter.hpp
xrtailor/include/xrtailor/runtime/gui/: GUI.hpp
xrtailor/include/xrtailor/runtime/input/: Input.hpp  MouseGrabber.hpp  PlayerController.hpp
xrtailor/include/xrtailor/runtime/mesh/: Mesh.hpp  MeshIO.hpp  Types.hpp
xrtailor/include/xrtailor/runtime/rendering/: AABB.hpp  AABBRenderer.hpp  Arrow.hpp  ArrowRenderer.hpp  Light.hpp  LineRenderer.hpp  MeshRenderer.hpp  ParticleGeometryRenderer.hpp  PointRenderer.hpp  RenderPipeline.hpp
xrtailor/include/xrtailor/runtime/resources/: Material.hpp  MaterialProperty.hpp  Resource.hpp
xrtailor/include/xrtailor/runtime/scene/: Actor.hpp  Camera.hpp  Component.hpp  (+4 more)
xrtailor/include/xrtailor/utils/: Callback.hpp  FileSystemUtils.hpp  Geodesic.hpp  Helper.hpp  Logger.hpp  ObjUtils.hpp  SeedGenerator.hpp  Timer.hpp
xrtailor/src/: main.cpp
xrtailor/src/config/: ClothConfigParser.cpp  EngineConfigParser.cpp  SimulationConfigParser.cpp
xrtailor/src/core/: DeviceHelper.cu  Precompiled.cpp
xrtailor/src/math/: BasicPrimitiveTests.cu  MathFunctions.cu  Quaternion.cu  Transform3x3.cu
xrtailor/src/memory/: Edge.cu  Face.cu  MemoryPool.cu  Node.cu  RenderableVertex.cu
xrtailor/src/physics/: ClothSolverHelper.cpp  ClothSolverHelper.cu  Collider.cpp  DebugDrawingHelper.cpp  PhysicsMesh.cu  PhysicsMeshHelper.cu
xrtailor/src/physics/broad_phase/: Bounds.cu
xrtailor/src/physics/dynamics/: BasicSolver.cu  BasicSolverHelper.cu  BindingConstraint.cu  FEMHelper.cu  FEMSolver.cu  LongRangeAttachments.cu
xrtailor/src/physics/graph_coloring/: Base.cu  GraphColoringHelper.cu
xrtailor/src/physics/icm/: GlobalIntersectionAnalysis.cu  IntersectionContourMinimization.cu
xrtailor/src/physics/impact_zone/: Entry.cu  Impact.cu  ImpactHelper.cu  ImpactZone.cu  ImpactZoneHelper.cu  ImpactZoneOptimizer.cu  Optimizer.cu  ParallelImpactZoneOptimizer.cu  ParallelOptimizer.cu
xrtailor/src/physics/pbd_collision/: PBDCollision.cu
xrtailor/src/physics/predictive_contact/: Solver.cu
xrtailor/src/physics/representative_triangle/: RTriangle.cu
xrtailor/src/physics/repulsion/: ImminentRepulsion.cu  ImminentRepulsionHelper.cu  PBDRepulsion.cu  Proximity.cu  RepulsionSolver.cu
xrtailor/src/pipeline/base/: ClothObjectBase.cpp  ClothSolverBase.cpp
xrtailor/src/runtime/engine/: Engine.cpp  GameInstance.cpp
xrtailor/src/runtime/export/: AlembicExporter.cpp  ObjSequenceExporter.cpp
xrtailor/src/runtime/gui/: GUI.cpp
xrtailor/src/runtime/input/: Input.cpp
xrtailor/src/runtime/mesh/: Mesh.cpp  MeshIO.cpp
xrtailor/src/runtime/rendering/: AABB.cpp  AABBRenderer.cpp  Arrow.cpp  ArrowRenderer.cpp  LineRenderer.cpp  MeshRenderer.cpp  PointRenderer.cpp
xrtailor/src/runtime/scene/: Actor.cpp  Camera.cpp  Component.cpp  Scene.cpp  Transform.cpp
xrtailor/src/utils/: FileSystemUtils.cpp  Geodesic.cpp  Helper.cpp  ObjUtils.cpp  SeedGenerator.cpp  Timer.cpp
(+65 files in other folders)
